[gd_scene load_steps=8 format=2]

[ext_resource path="res://pltformio_sprite/background/backgroundmenu.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://StageTwoMenu.gd" type="Script" id=3]



[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="StageTwo" type="Node"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160.027, 100.353 )
scale = Vector2( 0.619265, 0.51197 )
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 94.5659
margin_top = 51.5814
margin_right = 235.566
margin_bottom = 91.5814
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 141.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 141.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Choose character"

[node name="warrior" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 141.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Warrior"
flat = true

[node name="wizard" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 141.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "Wizard"
flat = true

[node name="archer" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 141.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 4 )
text = "Archer"
flat = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/warrior" to="." method="_on_warrior_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/wizard" to="." method="_on_wizard_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/archer" to="." method="_on_archer_pressed"]
